--- a/Softuni/WordReportGenerator/CompanyHierarchy/CompanyHierarchy.csproj
+++ b/Softuni/WordReportGenerator/CompanyHierarchy/CompanyHierarchy.csproj
@@ -39,7 +39,10 @@
     <Reference Include="System.Xml" />
   </ItemGroup>
   <ItemGroup>
+    <Compile Include="Customer.cs" />
     <Compile Include="Departments.cs" />
+    <Compile Include="Developer.cs" />
+    <Compile Include="Employee.cs" />
     <Compile Include="ICustomer.cs" />
     <Compile Include="IDeveloper.cs" />
     <Compile Include="IEmployee.cs" />
@@ -47,10 +50,20 @@
     <Compile Include="IProject.cs" />
     <Compile Include="IRegularEmployee.cs" />
     <Compile Include="ISale.cs" />
+    <Compile Include="ISalesEmployee.cs" />
+    <Compile Include="Manager.cs" />
     <Compile Include="Person.cs" />
     <Compile Include="IPerson.cs" />
+    <Compile Include="Project.cs" />
     <Compile Include="ProjectStates.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
+    <Compile Include="RegularEmployee.cs" />
+    <Compile Include="Sale.cs" />
+    <Compile Include="SalesEmployee.cs" />
+    <Compile Include="TestCompanyHierarchy.cs" />
+  </ItemGroup>
+  <ItemGroup>
+    <None Include="CompanyHierarchyDiagram.cd" />
   </ItemGroup>
   <Import Project="$(MSBuildToolsPath)\Microsoft.CSharp.targets" />
   <!-- To modify your build process, add your task inside one of the targets below and uncomment it. 
