task 5 import data and word report generation ready

--- a/Softuni/WordReportGenerator/WordReportGenerator/WordReportGenerator.csproj
+++ b/Softuni/WordReportGenerator/WordReportGenerator/WordReportGenerator.csproj
@@ -44,10 +44,6 @@
     <Reference Include="System.Xml" />
   </ItemGroup>
   <ItemGroup>
-    <Compile Include="DeleteMe\IDeveloper.cs" />
-    <Compile Include="DeleteMe\IEmployee.cs" />
-    <Compile Include="DeleteMe\IPerson.cs" />
-    <Compile Include="DeleteMe\ISalesEmployee.cs" />
     <Compile Include="Program.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
     <Compile Include="WordReportGenerator.cs" />
@@ -55,7 +51,12 @@
   <ItemGroup>
     <None Include="App.config" />
   </ItemGroup>
-  <ItemGroup />
+  <ItemGroup>
+    <ProjectReference Include="..\CompanyHierarchy\CompanyHierarchy.csproj">
+      <Project>{68f69597-bb2f-4bd6-a701-3123681e6c35}</Project>
+      <Name>CompanyHierarchy</Name>
+    </ProjectReference>
+  </ItemGroup>
   <Import Project="$(MSBuildToolsPath)\Microsoft.CSharp.targets" />
   <!-- To modify your build process, add your task inside one of the targets below and uncomment it. 
        Other similar extension points exist, see Microsoft.Common.targets.
