--- a/Softuni/WordReportGenerator/WordReportGenerator/WordReportGenerator.csproj
+++ b/Softuni/WordReportGenerator/WordReportGenerator/WordReportGenerator.csproj
@@ -44,8 +44,8 @@
     <Reference Include="System.Xml" />
   </ItemGroup>
   <ItemGroup>
-    <Compile Include="Program.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
+    <Compile Include="TestWordReportGenerator.cs" />
     <Compile Include="WordReportGenerator.cs" />
   </ItemGroup>
   <ItemGroup>
