--- a/Softuni/WordReportGenerator/WordReportGenerator/WordReportGenerator.csproj
+++ b/Softuni/WordReportGenerator/WordReportGenerator/WordReportGenerator.csproj
@@ -5,7 +5,7 @@
     <Configuration Condition=" '$(Configuration)' == '' ">Debug</Configuration>
     <Platform Condition=" '$(Platform)' == '' ">AnyCPU</Platform>
     <ProjectGuid>{93272EB0-89AB-4C1F-922C-FD16B8CAC6FF}</ProjectGuid>
-    <OutputType>Exe</OutputType>
+    <OutputType>Library</OutputType>
     <AppDesignerFolder>Properties</AppDesignerFolder>
     <RootNamespace>WordReportGenerator</RootNamespace>
     <AssemblyName>WordReportGenerator</AssemblyName>
@@ -31,6 +31,9 @@
     <ErrorReport>prompt</ErrorReport>
     <WarningLevel>4</WarningLevel>
   </PropertyGroup>
+  <PropertyGroup>
+    <StartupObject />
+  </PropertyGroup>
   <ItemGroup>
     <Reference Include="DocX">
       <HintPath>lib\DocX.dll</HintPath>
@@ -45,7 +48,6 @@
   </ItemGroup>
   <ItemGroup>
     <Compile Include="Properties\AssemblyInfo.cs" />
-    <Compile Include="TestWordReportGenerator.cs" />
     <Compile Include="WordReportGenerator.cs" />
   </ItemGroup>
   <ItemGroup>
