NullObjectsPattern: null objects pattern applied

--- a/NullObjectsPattern/NullObjectsPattern/NullObjectsPattern.csproj
+++ b/NullObjectsPattern/NullObjectsPattern/NullObjectsPattern.csproj
@@ -43,8 +43,12 @@
     <Reference Include="System.Xml" />
   </ItemGroup>
   <ItemGroup>
+    <Compile Include="IWarranty.cs" />
     <Compile Include="Program.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
+    <Compile Include="SoldArticle.cs" />
+    <Compile Include="VoidWarranty.cs" />
+    <Compile Include="Warranty.cs" />
   </ItemGroup>
   <ItemGroup>
     <None Include="App.config" />
