--- a/NullObjectsPattern/NullObjectsPattern/NullObjectsPattern.csproj
+++ b/NullObjectsPattern/NullObjectsPattern/NullObjectsPattern.csproj
@@ -49,7 +49,7 @@
     <Compile Include="Properties\AssemblyInfo.cs" />
     <Compile Include="SoldArticle.cs" />
     <Compile Include="VoidWarranty.cs" />
-    <Compile Include="Warranty.cs" />
+    <Compile Include="TimeLimitedWarranty.cs" />
   </ItemGroup>
   <ItemGroup>
     <None Include="App.config" />
