BranchingToStatePattern: fixes in Withdraw method

--- a/BranchingToStatePattern/BranchingToStatePattern/BranchingToStatePattern.csproj
+++ b/BranchingToStatePattern/BranchingToStatePattern/BranchingToStatePattern.csproj
@@ -47,7 +47,7 @@
     <Compile Include="Active.cs" />
     <Compile Include="Closed.cs" />
     <Compile Include="Frozen.cs" />
-    <Compile Include="IFreezable.cs" />
+    <Compile Include="IAccountState.cs" />
     <Compile Include="NotVerified.cs" />
     <Compile Include="Program.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
