--- a/NullObjectsPattern/NullObjectsPattern/NullObjectsPattern.csproj
+++ b/NullObjectsPattern/NullObjectsPattern/NullObjectsPattern.csproj
@@ -45,6 +45,7 @@
   <ItemGroup>
     <Compile Include="IWarranty.cs" />
     <Compile Include="LifeTimeWarranty.cs" />
+    <Compile Include="Part.cs" />
     <Compile Include="Program.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
     <Compile Include="SoldArticle.cs" />
