--- a/CheckDigit/CheckDigit/CheckDigit.csproj
+++ b/CheckDigit/CheckDigit/CheckDigit.csproj
@@ -43,6 +43,8 @@
     <Reference Include="System.Xml" />
   </ItemGroup>
   <ItemGroup>
+    <Compile Include="ControlDigitAlgorithm.cs" />
+    <Compile Include="ControlDigitsAlgorithms.cs" />
     <Compile Include="Int64Extensions.cs" />
     <Compile Include="Program.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
